--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,22 @@
 language: generic
-
 sudo: required
-
 services:
-    - docker
-
+- docker
 script:
-    - docker run -v ${TRAVIS_BUILD_DIR}:/root/src/ -w /root/src/ $DOCKER_IMAGE /bin/bash .travis-build.sh $DOCKER_IMAGE
-
+- docker run -v ${TRAVIS_BUILD_DIR}:/root/src/ -w /root/src/ $DOCKER_IMAGE /bin/bash .travis-build.sh $DOCKER_IMAGE
 env:
-    - DOCKER_IMAGE=fedora:30
-    - DOCKER_IMAGE=fedora:31
-    - DOCKER_IMAGE=fedora:32
-    - DOCKER_IMAGE=fedora:rawhide
-
+- DOCKER_IMAGE=fedora:31
+- DOCKER_IMAGE=fedora:32
+- DOCKER_IMAGE=fedora:rawhide
 matrix:
-    allow_failures:
-        - env: DOCKER_IMAGE=fedora:rawhide
-
+  allow_failures:
+  - env: DOCKER_IMAGE=fedora:rawhide
 before_deploy:
-    - openssl aes-256-cbc -K $encrypted_dbb5d5cb5df3_key -iv $encrypted_dbb5d5cb5df3_iv -in .copr.enc -out .copr -d
-
+- openssl aes-256-cbc -K $encrypted_dbb5d5cb5df3_key -iv $encrypted_dbb5d5cb5df3_iv -in .copr.enc -out .copr -d
 deploy:
-    skip_cleanup: true
-    provider: script
-    script: docker run -v ${TRAVIS_BUILD_DIR}:/root/src/ -w /root/src/ fedora:latest /bin/sh -c "dnf install -y copr-cli && copr-cli --config .copr build --nowait simc/stable python-wradlib.spec"
-    on:
-        branch: master
-        condition: $DOCKER_IMAGE = fedora:32
+  skip_cleanup: true
+  provider: script
+  script: docker run -v ${TRAVIS_BUILD_DIR}:/root/src/ -w /root/src/ fedora:latest /bin/sh -c "dnf install -y copr-cli && copr-cli --config .copr build --nowait simc/stable python-wradlib.spec"
+  true:
+    branch: master
+    condition: $DOCKER_IMAGE = fedora:32
