Added docker image

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ script:
 env:
 - DOCKER_IMAGE=fedora:31
 - DOCKER_IMAGE=fedora:32
+- DOCKER_IMAGE=fedora:33
 - DOCKER_IMAGE=fedora:rawhide
 matrix:
   allow_failures:
